# hf-tasks

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
frontend/: Dockerfile  main.py  requirements.txt
terraform/: backend.tfvars  base.tfvars  deployments.tfvars
terraform/backend/: main.tf  terraform.tfstate  variables.tf
terraform/base/: .terraform.lock.hcl  backend.tf  main.tf  variables.tf  versions.tf
terraform/deployments/: .terraform.lock.hcl  auth.tf  backend.tf  ecs.tf  main.tf  variables.tf  versions.tf
training/: Dockerfile  requirements.txt  test.sh
training/recipes/: distilbert-tweet_eval.yaml
training/trainer/: callbacks.py  config_utils.py  configs.py  data_utils.py  metrics.py  train.py
