[build-system]
requires = ["poetry-core==1.6.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hf-tasks"
version = "0.0.1"
description = "HF interview challenge."
authors = ["Maximilian Gartz <gartz.maximilian@gmail.com>"]
license = ""
readme = ""
packages = []
homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
pip = "^23.0.0"


########################
# frontend dependencies #
########################

[tool.poetry.group.frontend]
optional = true

[tool.poetry.group.frontend.dependencies]
gradio = "^4.19.0"
boto3 = "<=1.31.16"

########################
# training dependencies #
########################

[tool.poetry.group.training]
optional = true

[tool.poetry.group.training.dependencies]
accelerate = "^0.26.1"
datasets = "^2.14.5"
omegaconf = "^2.3.0"
optimum = {extras = ["exporters"], version = "^1.16.2"}
torch = "^2.1.0"
torchmetrics = "^1.3.1"
transformers = "^4.34.0"
wandb = "^0.16.2"
s3fs = "^2023.10.0"

######################
# test dependencies #
######################
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
ruff = "^0.2.1"
mypy = "^1.5.1"
bandit = {extras = ["toml"], version = "^1.7.5"}
pre-commit = "^3.3.3"

[tool.ruff]
target-version = "py310"
src = ["trainer", "app"]
exclude = ["venv", ".venv", "docs"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
per-file-ignores = { }
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10


[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disable_error_code = ["override", "attr-defined", "import", "empty-body"]
exclude = ["venv/", ".venv/", "docs/"]

[tool.bandit]
exclude_dirs = [
    "**/*_test.py",
    "**/test.py",
    "./venv/",
    "./.venv/",
    "./*cache*/",
    "./resources/",
    "./notebooks/",
    "./docs/",
    "./data/"
]
skips = ["B608"]
